k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
        - name: api
          image: hananacr.azurecr.io/api-service:v1
          ports:
            - containerPort: 3000

          # ===============================
          #        HEALTH PROBES
          # ===============================
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
            failureThreshold: 10
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          # ===============================
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: sre
  labels:
    app: api-service
spec:
  type: ClusterIP
  selector:
    app: api-service
  ports:
    - name: http
      port: 3000
      targetPort: 3000
