k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth
          image: hananacr.azurecr.io/auth-service:v1
          ports:
            - containerPort: 8080

          # ⭐ Health Checks
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20

          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 30
            periodSeconds: 5

          # ⭐ Resources
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: sre
  labels:
    app: auth-service     # ⭐ مهم للرصد و ServiceMonitor
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http          # ⭐ لازم للرصد
      port: 8080
      targetPort: 8080
