k8s/images-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images-deployment
  namespace: sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: images-service
  template:
    metadata:
      labels:
        app: images-service
    spec:
      containers:
        - name: images
          image: hananacr.azurecr.io/images-service:v2   # ⭐ هنا آخر نسخة
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: images-service
  namespace: sre
  labels:
    app: images-service
spec:
  type: ClusterIP
  selector:
    app: images-service
  ports:
    - name: http
      port: 9000
      targetPort: 9000
